fix kube hunter dialog spacing

--- a/dash/frontend/src/styles.scss
+++ b/dash/frontend/src/styles.scss
@@ -439,7 +439,8 @@ app-private {
   width: -webkit-fill-available;
   max-height: 400px;
   resize: none;
-  margin: 0 0 16px  0;
+  margin: 0 0 16px 0;
+  box-sizing: border-box;
   // Styles below replicate StackOverflow
   background-color: #f6f6f6;
   padding: 12px;
